--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -36,6 +36,7 @@ target_link_libraries(${PLUGIN_NAME} PRIVATE flutter flutter_wrapper_plugin)
 find_package(OpenCV REQUIRED PATHS ${OpenCV_DIR})
 target_link_libraries(${PLUGIN_NAME} PRIVATE
   "${PROJECT_SOURCE_DIR}/lib/tensorflowlite_c.dll.if.lib"
+  # "${PROJECT_SOURCE_DIR}/lib/tensorflow-lite.lib"
   "${PROJECT_SOURCE_DIR}/lib/tensorflowlite.dll.if.lib"
   "${PROJECT_SOURCE_DIR}/lib/flatbuffers.lib"
   "${PROJECT_SOURCE_DIR}/lib/glew32.lib"
