--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -35,10 +35,7 @@ target_link_libraries(${PLUGIN_NAME} PRIVATE flutter flutter_wrapper_plugin)
 
 find_package(OpenCV REQUIRED PATHS ${OpenCV_DIR})
 target_link_libraries(${PLUGIN_NAME} PRIVATE
-  "${PROJECT_SOURCE_DIR}/lib/tensorflowlite_c.dll.if.lib"
-  # "${PROJECT_SOURCE_DIR}/lib/tensorflow-lite.lib"
   "${PROJECT_SOURCE_DIR}/lib/tensorflowlite.dll.if.lib"
-  "${PROJECT_SOURCE_DIR}/lib/flatbuffers.lib"
   "${PROJECT_SOURCE_DIR}/lib/glew32.lib"
   "${PROJECT_SOURCE_DIR}/lib/glfw3.lib"
   "${OPENNI_DIR}/Lib/OpenNI2.lib"
@@ -48,7 +45,8 @@ target_link_libraries(${PLUGIN_NAME} PRIVATE
 
 # List of absolute paths to libraries that should be bundled with the plugin
 set(flutter_vision_bundled_libraries
-  ""
+"${PROJECT_SOURCE_DIR}/bin/tensorflowlite.dll"
+"${PROJECT_SOURCE_DIR}/bin/glew32.dll"
   PARENT_SCOPE
 )
 
