--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   http: ^0.13.4
   desktop_window: ^0.4.0
   file_picker: ^4.2.7
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
