--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -9,6 +9,7 @@ set(PLUGIN_NAME "flutter_vision_plugin")
 add_subdirectory("${PROJECT_SOURCE_DIR}/../handler/" "handler/")
 
 include_directories(
+  "${PROJECT_SOURCE_DIR}/include/"
   "${PROJECT_SOURCE_DIR}/include/tensorflow"
 )
 link_directories(
@@ -48,5 +49,8 @@ target_link_libraries( ${PLUGIN_NAME} PRIVATE realsense2)
 set(flutter_vision_bundled_libraries
   "${PROJECT_SOURCE_DIR}/lib/libtensorflowlite.so"
   "${CMAKE_BINARY_DIR}/plugins/flutter_vision/handler/libflutterVisionHandler.so"
+  "${PROJECT_SOURCE_DIR}/lib/libmodule-lips2.so"
+  "${PROJECT_SOURCE_DIR}/lib/libOpenNI2.so"
+  "${PROJECT_SOURCE_DIR}/lib/OpenNI.ini"
   PARENT_SCOPE
 )
