--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_vision
-description: Framework for 2D and 3D image processing. Integrate with OpenCV, OpenNI2, TensorFlow.
-version: 0.0.8
+description: Framework for 2D and 3D image processing. Integrate with OpenCV, OpenNI2, Realsense2 and TensorFlow Lite.
+version: 0.5.0
 homepage:
 
 environment:
