--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,3 +26,6 @@ flutter:
         pluginClass: FlutterVisionPlugin
       windows:
         pluginClass: FlutterVisionPlugin
+
+scripts:
+  dependencies-linux: echo "Hello"
