--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "handler"]
 	path = handler
-	url = https://github.com/HedgeHao/flutter_vision_handler_example.git
+	url = git@github.com:HedgeHao/flutter_vision_handler_example.git
