--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -51,6 +51,10 @@ set(flutter_vision_bundled_libraries
   "$ENV{FLUTTER_VISION_DEP}/opengl/bin/glew32.dll"
   "$ENV{FLUTTER_VISION_DEP}/realsense2/bin/x64/realsense2.dll"
   "$ENV{FLUTTER_VISION_DEP}/handler/build/flutterVisionHandler.dll"
+  "$ENV{FLUTTER_VISION_DEP}/opencv/x64/vc15/bin/opencv_world454.dll"
+  "$ENV{OPENNI2_REDIST64}/OpenNI2"
+  "$ENV{OPENNI2_REDIST64}/OpenNI.ini"
+  "$ENV{OPENNI2_REDIST64}/OpenNI2.dll"
   PARENT_SCOPE
 )
 
