--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -33,7 +33,10 @@ target_include_directories(${PLUGIN_NAME} INTERFACE
   "${CMAKE_CURRENT_SOURCE_DIR}/include")
 target_link_libraries(${PLUGIN_NAME} PRIVATE flutter flutter_wrapper_plugin)
 
-find_package(OpenCV REQUIRED PATHS $ENV{FLUTTER_VISION_DEP}/opencv)
+
+set(OpenCV_DIR "$ENV{FLUTTER_VISION_DEP}/opencv")
+find_package(OpenCV REQUIRED)
+message(${OpenCV_INCLUDE_DIRS})
 target_link_libraries(${PLUGIN_NAME} PRIVATE
   "$ENV{FLUTTER_VISION_DEP}/realsense2/lib/x64/realsense2.lib"
   "$ENV{FLUTTER_VISION_DEP}/tensorflowlite/lib/tensorflowlite.dll.if.lib"
@@ -51,8 +54,8 @@ set(flutter_vision_bundled_libraries
   "$ENV{FLUTTER_VISION_DEP}/opengl/bin/glew32.dll"
   "$ENV{FLUTTER_VISION_DEP}/realsense2/bin/x64/realsense2.dll"
   "$ENV{FLUTTER_VISION_DEP}/handler/build/flutterVisionHandler.dll"
-  "$ENV{FLUTTER_VISION_DEP}/opencv/x64/vc15/bin/opencv_world454.dll"
-  "$ENV{FLUTTER_VISION_DEP}/opencv/x64/vc15/bin/opencv_world454d.dll"
+  "$ENV{FLUTTER_VISION_DEP}/opencv/x64/vc15/bin/opencv_world460.dll"
+  "$ENV{FLUTTER_VISION_DEP}/opencv/x64/vc15/bin/opencv_world460d.dll"
   "$ENV{OPENNI2_REDIST64}/OpenNI2"
   "$ENV{OPENNI2_REDIST64}/OpenNI.ini"
   "$ENV{OPENNI2_REDIST64}/OpenNI2.dll"
