--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -58,6 +58,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/flutter_logo.png
+    - assets/barcode_sr.prototxt
+    - assets/barcode_sr.caffemodel
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
