rename to flutter_vision3d

--- a/example/linux/CMakeLists.txt
+++ b/example/linux/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 project(runner LANGUAGES CXX)
 
-set(BINARY_NAME "flutter_vision_example")
-set(APPLICATION_ID "tw.hedgehao.flutter_vision_example")
+set(BINARY_NAME "flutter_vision3d_example")
+set(APPLICATION_ID "tw.hedgehao.flutter_vision3d_example")
 
 cmake_policy(SET CMP0063 NEW)
 
