--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,9 +1,9 @@
-name: flutter_vision_example
-description: Demonstrates how to use the flutter_vision.
+name: flutter_vision3d_example
+description: Demonstrates how to use the flutter_vision3d.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -18,9 +18,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_vision:
+  flutter_vision3d:
     # When depending on this package from a real application you should use:
-    #   flutter_vision: ^x.y.z
+    #   flutter_vision3d: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
@@ -49,7 +49,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
