--- a/handler/CMakeLists.txt
+++ b/handler/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.9)
 
-set(TARGET flutterVisionHandler)
+set(TARGET flutter3dVisionHandler)
 
-add_library(${TARGET} SHARED flutter_vision_handler.cpp)
+add_library(${TARGET} SHARED flutter_3d_vision_handler.cpp)
 
 IF(MSVC)
     file(TO_CMAKE_PATH $ENV{OPENCV_ROOT} OpenCV_DIR)
@@ -12,6 +12,6 @@ IF(MSVC)
     ENDIF()
 ENDIF()
 
-set(OpenCV_DIR "$ENV{FLUTTER_VISION_DEP}/opencv")
+set(OpenCV_DIR "$ENV{FLUTTER_3D_VISION_DEP}/opencv")
 find_package(OpenCV REQUIRED)
 target_link_libraries(${TARGET} ${OpenCV_LIBS})
