--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -64,7 +64,7 @@ endif()
 find_path(OPENNI2_INC NAMES OpenNI.h HINTS "$ENV{OPENNI2_INCLUDE}")
 find_library(OPENNI2_LIB NAMES OpenNI2 HINTS "$ENV{OPENNI2_REDIST}")
 
-if(OPENNI2_INC AND OPENNI2_LIB)
+if(${OPENNI2_INC} AND ${OPENNI2_LIB})
   include_directories($ENV{OPENNI2_INCLUDE})
   target_link_libraries(${PLUGIN_NAME} PRIVATE OpenNI2)
 else()
